fix menu z-index

--- a/json-form/src/JsonEditor.scss
+++ b/json-form/src/JsonEditor.scss
@@ -239,6 +239,7 @@ $carbon--theme: $carbon--theme--g10;
   .tm {
     background-color: white;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
+    z-index: 1;
 
     .tm-item {
       padding: 0.2rem 0.5rem;
